--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12,<4"
 dependencies = [
-    "django (>=5.1.6,<6.0.0)"
+    "django (>=5.1.6,<6.0.0)",
+    "django-environ (>=0.12.0,<0.13.0)",
+    "psycopg[binary] (>=3.2.4,<4.0.0)"
 ]
 
 [tool.poetry]
