--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ requires-python = ">=3.12,<4"
 dependencies = [
     "django (>=5.1.6,<6.0.0)",
     "django-environ (>=0.12.0,<0.13.0)",
-    "psycopg[binary] (>=3.2.4,<4.0.0)"
+    "psycopg[binary] (>=3.2.4,<4.0.0)",
+    "django-cotton (>=1.5.2,<2.0.0)",
+    "django-htmx (>=1.22.0,<2.0.0)"
 ]
 
 [tool.poetry]
