--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "django-environ (>=0.12.0,<0.13.0)",
     "psycopg[binary] (>=3.2.4,<4.0.0)",
     "django-cotton (>=1.5.2,<2.0.0)",
-    "django-htmx (>=1.22.0,<2.0.0)"
+    "django-htmx (>=1.22.0,<2.0.0)",
+    "django-extensions (>=3.2.3,<4.0.0)"
 ]
 
 [tool.poetry]
