--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "psycopg[binary] (>=3.2.4,<4.0.0)",
     "django-cotton (>=1.5.2,<2.0.0)",
     "django-htmx (>=1.22.0,<2.0.0)",
-    "django-extensions (>=3.2.3,<4.0.0)"
+    "django-extensions (>=3.2.3,<4.0.0)",
+    "django-model-utils (>=5.0.0,<6.0.0)"
 ]
 
 [tool.poetry]
