--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ pytest-django = "^4.10.0"
 rich = "^13.9.4"
 mypy = "^1.15.0"
 django-stubs = {extras = ["compatible-mypy"], version = "^5.1.3"}
+faker = "^36.1.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
