--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ rich = "^13.9.4"
 mypy = "^1.15.0"
 django-stubs = {extras = ["compatible-mypy"], version = "^5.1.3"}
 faker = "^36.1.1"
+django-browser-reload = "^1.18.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
