--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ mypy = "^1.15.0"
 django-stubs = {extras = ["compatible-mypy"], version = "^5.1.3"}
 faker = "^36.1.1"
 django-browser-reload = "^1.18.0"
+djade = "^1.3.2"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
