--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ django-stubs = {extras = ["compatible-mypy"], version = "^5.1.3"}
 faker = "^36.1.1"
 django-browser-reload = "^1.18.0"
 djade = "^1.3.2"
+django-debug-toolbar = "^5.0.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
