--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ faker = "^36.1.1"
 django-browser-reload = "^1.18.0"
 djade = "^1.3.2"
 django-debug-toolbar = "^5.0.1"
+pytest-cov = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
@@ -41,7 +42,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings.test"
-addopts = "-vv"
+addopts = "-vv --cov=apps --cov-report html"
 
 
 [tool.ruff]
